tests/paczka1/fuzzy1/30433272.err
Error in line 4: FQ0D S505 43,6
Error in line 1: HzFcs S146 20,5
Error in line 9: y0U76 S752 2,4
Error in line 8: HzFcs S742 97,4
Error in line 16: HAoIeBIWzNJ S505 35,5
Error in line 17: HAoIeBIWzNJ S146 23,2
Error in line 15: HzFcs A617 8,6
Error in line 22: HzFcs S752 82,3
Error in line 21: e6zJ5Njs A617 80,9
Error in line 31: A617 S146 31,3
Error in line 38: A617 A617 17,5
